src/main/java/com/example/olc/employee/error/InvalidUploadFormatError.java
package com.example.olc.employee.error;

import com.example.olc.common.error.BaseError;

public class InvalidUploadFormatError extends BaseError {}
